// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCard matches snapshot with isCategory 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "opacity": 1,
    }
  }
>
  <Image
    accessibilityRole="image"
    alt="Her Come Tomorrow"
    source={
      {
        "testUri": "../../../assets/images/books/her-come-tomorrow.webp",
      }
    }
    style={
      [
        {
          "backgroundColor": "#eee",
          "borderRadius": 10,
          "marginBottom": 8,
          "resizeMode": "cover",
        },
        {
          "height": 160,
          "width": 160,
        },
      ]
    }
    testID="book-image"
  />
  <Text
    style={
      [
        {
          "color": "#333",
          "fontFamily": "Roboto-Medium",
          "fontSize": 16,
        },
        {
          "color": "#121212",
          "marginBottom": 4,
        },
      ]
    }
  >
    Her Come Tomorrow
  </Text>
  <Text
    style={
      [
        {
          "color": "#333",
          "fontFamily": "Roboto-Bold",
          "fontSize": 14,
        },
        {
          "color": "#54408C",
        },
      ]
    }
  >
    $
    8.99
  </Text>
</View>
`;

exports[`BookCard matches snapshot without isCategory 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "flex-start",
      "opacity": 1,
    }
  }
>
  <Image
    accessibilityRole="image"
    alt="Her Come Tomorrow"
    source={
      {
        "testUri": "../../../assets/images/books/her-come-tomorrow.webp",
      }
    }
    style={
      [
        {
          "backgroundColor": "#eee",
          "borderRadius": 10,
          "marginBottom": 8,
          "resizeMode": "cover",
        },
        {
          "height": 150,
          "width": 130,
        },
      ]
    }
    testID="book-image"
  />
  <Text
    style={
      [
        {
          "color": "#333",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
        },
        {
          "color": "#121212",
          "marginBottom": 4,
        },
      ]
    }
  >
    Her Come Tomorrow
  </Text>
  <Text
    style={
      [
        {
          "color": "#333",
          "fontFamily": "Roboto-Bold",
          "fontSize": 12,
        },
        {
          "color": "#54408C",
        },
      ]
    }
  >
    $
    8.99
  </Text>
</View>
`;
